--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "pdf-dummy-data-generator",
   "version": "1.0.0",
-  "description": "",
-  "main": "gen-dummy-data.js",
+  "description": "Generate PDF Files from a JSON configuration file.",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "JS_ON (Joseph Shannon)",
   "license": "ISC",
   "dependencies": {
     "chalk": "5.3.0",
